# confignode

./: Cargo.toml  LICENSE  README.md
examples/: savefile.rs
src/: confignode.rs  error.rs  lib.rs
tests/: parsing.rs
